...
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:paddingRight="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/review_body"
                style="@style/Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:reviewBody="@{body}">

...
            app:fabCustomSize="64dp"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="right|bottom" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/wishlist_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="100dp"
            android:src="@drawable/ic_wishlist_64"
            android:tint="@null"
            android:tintMode="multiply"
...
