...

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize">

                            <EditText
                                android:id="@+id/search_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="5dp"
                                android:background="@drawable/web_view_text_view"
                                android:fontFamily="@font/light"
...
                                android:paddingLeft="5dp"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black"
                                android:textColorHint="@color/black"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/search"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintHorizontal_weight="4"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                            </EditText>
...
